--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,10 @@
   "require": {
     "symfony/http-foundation": "3.*",
     "symfony/http-kernel": "3.*",
-    "symfony/form": "3.*"
+    "symfony/form": "3.*",
+    "doctrine/annotations": "1.5.*",
+    "alcaeus/mongo-php-adapter": "1.0.7",
+    "doctrine/mongodb-odm": "^1.1"
   },
   "autoload": {
     "psr-4": {
