--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
   "description": "Helper trait to ease writing APIs in Symfony",
   "license": "MIT",
   "require": {
-    "symfony/http-foundation": "3.*",
-    "symfony/http-kernel": "3.*",
-    "symfony/form": "3.*",
+    "symfony/http-foundation": "3.* || 4.*",
+    "symfony/http-kernel": "3.* || 4.*",
+    "symfony/form": "3.* || 4.*",
     "doctrine/annotations": "1.5.*",
     "alcaeus/mongo-php-adapter": "1.0.7",
     "doctrine/mongodb-odm": "^1.1"
