--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "symfony/http-kernel": "3.* || 4.*",
     "symfony/form": "3.* || 4.*",
     "symfony/validator": "3.* || 4.*",
-    "ext-json": "^1.6"
+    "ext-json": "*"
   },
   "autoload": {
     "psr-4": {
