--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       max-parallel: 10
       matrix:
         php: ['8.1', '8.2', '8.3', '8.4']
-        sf_version: ['5.*', '6.*', '7.*']
+        sf_version: ['5.*', '6.*', '7.*', '8.*']
 
     steps:
       - uses: actions/checkout@v4
